// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wmlQuery selector should correctly select ancestor chain 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 86,
        "start": 82,
        "type": "string",
        "value": "Tess",
      },
    ],
    "contentsEnd": 86,
    "contentsStart": 82,
    "end": 93,
    "props": Object {},
    "start": 76,
    "tag": "Name",
    "tagEnd": 81,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should correctly select leaf node 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 86,
        "start": 82,
        "type": "string",
        "value": "Tess",
      },
    ],
    "contentsEnd": 86,
    "contentsStart": 82,
    "end": 93,
    "props": Object {},
    "start": 76,
    "tag": "Name",
    "tagEnd": 81,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should correctly select root node 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "end": 86,
            "start": 82,
            "type": "string",
            "value": "Tess",
          },
        ],
        "contentsEnd": 86,
        "contentsStart": 82,
        "end": 93,
        "props": Object {},
        "start": 76,
        "tag": "Name",
        "tagEnd": 81,
        "type": "tag",
      },
      Object {
        "contents": Array [],
        "contentsEnd": 290,
        "contentsStart": 290,
        "end": 301,
        "props": Object {
          "adjective": Object {
            "end": 240,
            "start": 224,
            "value": "hers",
            "valueEnd": 239,
            "valueStart": 235,
          },
          "object": Object {
            "end": 174,
            "start": 162,
            "value": "her",
            "valueEnd": 173,
            "valueStart": 170,
          },
          "possessive": Object {
            "end": 207,
            "start": 191,
            "value": "her",
            "valueEnd": 206,
            "valueStart": 203,
          },
          "reflexive": Object {
            "end": 276,
            "start": 257,
            "value": "herself",
            "valueEnd": 275,
            "valueStart": 268,
          },
          "subject": Object {
            "end": 145,
            "start": 132,
            "value": "she",
            "valueEnd": 144,
            "valueStart": 141,
          },
        },
        "start": 106,
        "tag": "Pronouns",
        "tagEnd": 115,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 342,
            "start": 331,
            "type": "string",
            "value": "Frumpy Goth",
          },
        ],
        "contentsEnd": 342,
        "contentsStart": 331,
        "end": 360,
        "props": Object {},
        "start": 314,
        "tag": "FirstImpression",
        "tagEnd": 330,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 399,
            "start": 387,
            "type": "string",
            "value": "Fuchsia eyes",
          },
        ],
        "contentsEnd": 399,
        "contentsStart": 387,
        "end": 414,
        "props": Object {},
        "start": 373,
        "tag": "OneCoolThing",
        "tagEnd": 386,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 517,
            "start": 435,
            "type": "string",
            "value": "A bulky frock-coat lovingly kit-bashed from a black hoodie and patchily dyed lace.",
          },
        ],
        "contentsEnd": 517,
        "contentsStart": 435,
        "end": 526,
        "props": Object {},
        "start": 427,
        "tag": "Outfit",
        "tagEnd": 434,
        "type": "tag",
      },
    ],
    "contentsEnd": 535,
    "contentsStart": 63,
    "end": 547,
    "props": Object {
      "fileName": Object {
        "end": 46,
        "start": 31,
        "value": "Tess",
        "valueEnd": 45,
        "valueStart": 41,
      },
      "key": Object {
        "end": 30,
        "start": 20,
        "value": "TESS",
        "valueEnd": 29,
        "valueStart": 25,
      },
      "player": Object {
        "end": 62,
        "start": 47,
        "value": "TonyLB",
        "valueEnd": 61,
        "valueStart": 55,
      },
    },
    "start": 9,
    "tag": "Character",
    "tagEnd": 19,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should correctly subset by property 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "end": 150,
            "start": 117,
            "type": "string",
            "value": "Test Render:
                    ",
          },
          Object {
            "contents": Array [
              Object {
                "end": 183,
                "start": 172,
                "type": "string",
                "value": "Clock Tower",
              },
            ],
            "contentsEnd": 183,
            "contentsStart": 172,
            "end": 190,
            "props": Object {
              "to": Object {
                "end": 171,
                "start": 156,
                "value": "clockTower",
                "valueEnd": 170,
                "valueStart": 160,
              },
            },
            "start": 150,
            "tag": "Link",
            "tagEnd": 155,
            "type": "tag",
          },
        ],
        "contentsEnd": 207,
        "contentsStart": 96,
        "end": 221,
        "props": Object {},
        "start": 83,
        "tag": "Description",
        "tagEnd": 95,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 258,
            "start": 254,
            "type": "string",
            "value": "test",
          },
        ],
        "contentsEnd": 258,
        "contentsStart": 254,
        "end": 265,
        "props": Object {
          "to": Object {
            "end": 253,
            "start": 244,
            "value": "Test",
            "valueEnd": 252,
            "valueStart": 248,
          },
        },
        "start": 238,
        "tag": "Exit",
        "tagEnd": 243,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 306,
            "start": 300,
            "type": "string",
            "value": "vortex",
          },
        ],
        "contentsEnd": 306,
        "contentsStart": 300,
        "end": 313,
        "props": Object {
          "from": Object {
            "end": 299,
            "start": 288,
            "value": "Test",
            "valueEnd": 298,
            "valueStart": 294,
          },
        },
        "start": 282,
        "tag": "Exit",
        "tagEnd": 287,
        "type": "tag",
      },
    ],
    "contentsEnd": 326,
    "contentsStart": 66,
    "end": 333,
    "props": Object {
      "global": Object {
        "end": 65,
        "start": 59,
        "value": true,
      },
      "key": Object {
        "end": 58,
        "start": 46,
        "value": "VORTEX",
        "valueEnd": 57,
        "valueStart": 51,
      },
    },
    "start": 40,
    "tag": "Room",
    "tagEnd": 45,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly chain complex predicates 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 258,
        "start": 254,
        "type": "string",
        "value": "test",
      },
    ],
    "contentsEnd": 258,
    "contentsStart": 254,
    "end": 265,
    "props": Object {
      "to": Object {
        "end": 253,
        "start": 244,
        "value": "Test",
        "valueEnd": 252,
        "valueStart": 248,
      },
    },
    "start": 238,
    "tag": "Exit",
    "tagEnd": 243,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select :first filter 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 258,
        "start": 254,
        "type": "string",
        "value": "test",
      },
    ],
    "contentsEnd": 258,
    "contentsStart": 254,
    "end": 265,
    "props": Object {
      "to": Object {
        "end": 253,
        "start": 244,
        "value": "Test",
        "valueEnd": 252,
        "valueStart": 248,
      },
    },
    "start": 238,
    "tag": "Exit",
    "tagEnd": 243,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select boolean or 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 150,
        "start": 117,
        "type": "string",
        "value": "Test Render:
                    ",
      },
      Object {
        "contents": Array [
          Object {
            "end": 183,
            "start": 172,
            "type": "string",
            "value": "Clock Tower",
          },
        ],
        "contentsEnd": 183,
        "contentsStart": 172,
        "end": 190,
        "props": Object {
          "to": Object {
            "end": 171,
            "start": 156,
            "value": "clockTower",
            "valueEnd": 170,
            "valueStart": 160,
          },
        },
        "start": 150,
        "tag": "Link",
        "tagEnd": 155,
        "type": "tag",
      },
    ],
    "contentsEnd": 207,
    "contentsStart": 96,
    "end": 221,
    "props": Object {},
    "start": 83,
    "tag": "Description",
    "tagEnd": 95,
    "type": "tag",
  },
  Object {
    "contents": Array [
      Object {
        "end": 545,
        "start": 455,
        "type": "string",
        "value": "Clocktower
                    test
                    on multiple lines
                ",
      },
    ],
    "contentsEnd": 545,
    "contentsStart": 434,
    "end": 559,
    "props": Object {},
    "start": 421,
    "tag": "Description",
    "tagEnd": 433,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select boolean or of chained selectors 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 258,
        "start": 254,
        "type": "string",
        "value": "test",
      },
    ],
    "contentsEnd": 258,
    "contentsStart": 254,
    "end": 265,
    "props": Object {
      "to": Object {
        "end": 253,
        "start": 244,
        "value": "Test",
        "valueEnd": 252,
        "valueStart": 248,
      },
    },
    "start": 238,
    "tag": "Exit",
    "tagEnd": 243,
    "type": "tag",
  },
  Object {
    "contents": Array [
      Object {
        "end": 306,
        "start": 300,
        "type": "string",
        "value": "vortex",
      },
    ],
    "contentsEnd": 306,
    "contentsStart": 300,
    "end": 313,
    "props": Object {
      "from": Object {
        "end": 299,
        "start": 288,
        "value": "Test",
        "valueEnd": 298,
        "valueStart": 294,
      },
    },
    "start": 282,
    "tag": "Exit",
    "tagEnd": 287,
    "type": "tag",
  },
  Object {
    "contents": Array [
      Object {
        "end": 545,
        "start": 455,
        "type": "string",
        "value": "Clocktower
                    test
                    on multiple lines
                ",
      },
    ],
    "contentsEnd": 545,
    "contentsStart": 434,
    "end": 559,
    "props": Object {},
    "start": 421,
    "tag": "Description",
    "tagEnd": 433,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select grouped operators 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 150,
        "start": 117,
        "type": "string",
        "value": "Test Render:
                    ",
      },
      Object {
        "contents": Array [
          Object {
            "end": 183,
            "start": 172,
            "type": "string",
            "value": "Clock Tower",
          },
        ],
        "contentsEnd": 183,
        "contentsStart": 172,
        "end": 190,
        "props": Object {
          "to": Object {
            "end": 171,
            "start": 156,
            "value": "clockTower",
            "valueEnd": 170,
            "valueStart": 160,
          },
        },
        "start": 150,
        "tag": "Link",
        "tagEnd": 155,
        "type": "tag",
      },
    ],
    "contentsEnd": 207,
    "contentsStart": 96,
    "end": 221,
    "props": Object {},
    "start": 83,
    "tag": "Description",
    "tagEnd": 95,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select nested :nthChild filters 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "end": 306,
        "start": 300,
        "type": "string",
        "value": "vortex",
      },
    ],
    "contentsEnd": 306,
    "contentsStart": 300,
    "end": 313,
    "props": Object {
      "from": Object {
        "end": 299,
        "start": 288,
        "value": "Test",
        "valueEnd": 298,
        "valueStart": 294,
      },
    },
    "start": 282,
    "tag": "Exit",
    "tagEnd": 287,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should properly select one level :nthChild filter 1`] = `
Array [
  Object {
    "contents": Array [],
    "end": 365,
    "props": Object {
      "key": Object {
        "end": 362,
        "start": 352,
        "value": "Test",
        "valueEnd": 361,
        "valueStart": 357,
      },
    },
    "start": 346,
    "tag": "Room",
    "tagEnd": 351,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should return a list for multiple matches 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "end": 150,
            "start": 117,
            "type": "string",
            "value": "Test Render:
                    ",
          },
          Object {
            "contents": Array [
              Object {
                "end": 183,
                "start": 172,
                "type": "string",
                "value": "Clock Tower",
              },
            ],
            "contentsEnd": 183,
            "contentsStart": 172,
            "end": 190,
            "props": Object {
              "to": Object {
                "end": 171,
                "start": 156,
                "value": "clockTower",
                "valueEnd": 170,
                "valueStart": 160,
              },
            },
            "start": 150,
            "tag": "Link",
            "tagEnd": 155,
            "type": "tag",
          },
        ],
        "contentsEnd": 207,
        "contentsStart": 96,
        "end": 221,
        "props": Object {},
        "start": 83,
        "tag": "Description",
        "tagEnd": 95,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 258,
            "start": 254,
            "type": "string",
            "value": "test",
          },
        ],
        "contentsEnd": 258,
        "contentsStart": 254,
        "end": 265,
        "props": Object {
          "to": Object {
            "end": 253,
            "start": 244,
            "value": "Test",
            "valueEnd": 252,
            "valueStart": 248,
          },
        },
        "start": 238,
        "tag": "Exit",
        "tagEnd": 243,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 306,
            "start": 300,
            "type": "string",
            "value": "vortex",
          },
        ],
        "contentsEnd": 306,
        "contentsStart": 300,
        "end": 313,
        "props": Object {
          "from": Object {
            "end": 299,
            "start": 288,
            "value": "Test",
            "valueEnd": 298,
            "valueStart": 294,
          },
        },
        "start": 282,
        "tag": "Exit",
        "tagEnd": 287,
        "type": "tag",
      },
    ],
    "contentsEnd": 326,
    "contentsStart": 66,
    "end": 333,
    "props": Object {
      "global": Object {
        "end": 65,
        "start": 59,
        "value": true,
      },
      "key": Object {
        "end": 58,
        "start": 46,
        "value": "VORTEX",
        "valueEnd": 57,
        "valueStart": 51,
      },
    },
    "start": 40,
    "tag": "Room",
    "tagEnd": 45,
    "type": "tag",
  },
  Object {
    "contents": Array [],
    "end": 365,
    "props": Object {
      "key": Object {
        "end": 362,
        "start": 352,
        "value": "Test",
        "valueEnd": 361,
        "valueStart": 357,
      },
    },
    "start": 346,
    "tag": "Room",
    "tagEnd": 351,
    "type": "tag",
  },
]
`;

exports[`wmlQuery selector should select root node when passed empty string 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "end": 86,
            "start": 82,
            "type": "string",
            "value": "Tess",
          },
        ],
        "contentsEnd": 86,
        "contentsStart": 82,
        "end": 93,
        "props": Object {},
        "start": 76,
        "tag": "Name",
        "tagEnd": 81,
        "type": "tag",
      },
      Object {
        "contents": Array [],
        "contentsEnd": 290,
        "contentsStart": 290,
        "end": 301,
        "props": Object {
          "adjective": Object {
            "end": 240,
            "start": 224,
            "value": "hers",
            "valueEnd": 239,
            "valueStart": 235,
          },
          "object": Object {
            "end": 174,
            "start": 162,
            "value": "her",
            "valueEnd": 173,
            "valueStart": 170,
          },
          "possessive": Object {
            "end": 207,
            "start": 191,
            "value": "her",
            "valueEnd": 206,
            "valueStart": 203,
          },
          "reflexive": Object {
            "end": 276,
            "start": 257,
            "value": "herself",
            "valueEnd": 275,
            "valueStart": 268,
          },
          "subject": Object {
            "end": 145,
            "start": 132,
            "value": "she",
            "valueEnd": 144,
            "valueStart": 141,
          },
        },
        "start": 106,
        "tag": "Pronouns",
        "tagEnd": 115,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 342,
            "start": 331,
            "type": "string",
            "value": "Frumpy Goth",
          },
        ],
        "contentsEnd": 342,
        "contentsStart": 331,
        "end": 360,
        "props": Object {},
        "start": 314,
        "tag": "FirstImpression",
        "tagEnd": 330,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 399,
            "start": 387,
            "type": "string",
            "value": "Fuchsia eyes",
          },
        ],
        "contentsEnd": 399,
        "contentsStart": 387,
        "end": 414,
        "props": Object {},
        "start": 373,
        "tag": "OneCoolThing",
        "tagEnd": 386,
        "type": "tag",
      },
      Object {
        "contents": Array [
          Object {
            "end": 517,
            "start": 435,
            "type": "string",
            "value": "A bulky frock-coat lovingly kit-bashed from a black hoodie and patchily dyed lace.",
          },
        ],
        "contentsEnd": 517,
        "contentsStart": 435,
        "end": 526,
        "props": Object {},
        "start": 427,
        "tag": "Outfit",
        "tagEnd": 434,
        "type": "tag",
      },
    ],
    "contentsEnd": 535,
    "contentsStart": 63,
    "end": 547,
    "props": Object {
      "fileName": Object {
        "end": 46,
        "start": 31,
        "value": "Tess",
        "valueEnd": 45,
        "valueStart": 41,
      },
      "key": Object {
        "end": 30,
        "start": 20,
        "value": "TESS",
        "valueEnd": 29,
        "valueStart": 25,
      },
      "player": Object {
        "end": 62,
        "start": 47,
        "value": "TonyLB",
        "valueEnd": 61,
        "valueStart": 55,
      },
    },
    "start": 9,
    "tag": "Character",
    "tagEnd": 19,
    "type": "tag",
  },
]
`;
